cmake_minimum_required(VERSION 3.15)
project(Data_Structure_Algos)

set(CMAKE_CXX_STANDARD 14)

add_executable(Data_Structure_Algos Kadanes.cpp)
add_executable(MooreVoting MooreVoting.cpp)
add_executable(Maximum-Consecutive-Ones Maximum-Consecutive-Ones.cpp)
add_executable(Leader-Problem Leader-Problem.cpp)
add_executable(FindUniqueElement FindUniqueElement.cpp)
add_executable(ArrayElementsNByK ArrayElementsNByK.cpp)
add_executable(LinkedListConstruct LinkedListConstruct.cpp)
add_executable(LinkedListDeleteByKey LinkedListDeleteByKey.cpp)
add_executable(LinkedListNthNodeFromEnd LinkedListNthNodeFromEnd.cpp)
add_executable(LinkedListCycleDetection LinkedListCycleDetection.cpp)
add_executable(GraphBfs GraphBfs.cpp)
add_executable(TreeBasic TreeBasic.cpp)
add_executable(DisjointSet DisjointSet.cpp)